--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,6 +2,7 @@
 .user-show-avatar{
     height: 128px;
     width: 128px;
+    border: 2px solid white;
 }
 .job-title-icon {
     display: inline-block;
@@ -31,6 +32,7 @@
 /*User Index Page Styles*/
 .user-index-avatar{
     border-radius: 50%;
+    border: 2px solid white;
 }
 .well.white-bg {
     background-color: white;
